Changes since last release:

VERSION 0.4.0
DATE xx/xx/2008
17th Alpha Release

NEWS:


NEW: [features/improvements]
+Improved Python auto-indenter (patch from Ofer Schwarz)
+Show auto-completion choices with Ctrl+Space (patch from Ofer Schwarz)
+Add Paste After command (patch from Dario Ghilardi)
+Report number of matches that were replaced in a Replace All action
+Expand groups when doing a regular expression search and replace
+Add Polish and Slovenian translations
+User configuration files are now kept at standard platform locations
+New version of PyShell. Supports custom styles.
+Middle click closes tabs (patch from craig.ds)
+Double click empty tab area opens new tab (patch from craig.ds)

BUG FIXES:
+Fix encoding errors when loading plugins on some systems
+Fix not being able to cut and copy from Shelf windows
+Fix bug in selecting Cancel when prompted to save modifications that would
 cause the editor to block paint events and appear frozen.
+Ctrl+W properly closes the active window instead of always defaulting to the
 tab of the top MainWindow.
+Fix not being able to search for strings with '.' in them in non-regex mode
+Fix bug in Launch output sometimes missing output data
+Fix inaccurate highlighting of words when doing incremental whole word search
+Fix regex not working with '^' (patch from craig.ds)
+Fix bug in populating quick finds search history menu

#-----------------------------------------------------------------------------#

For Alpha 0.3 Release Series Changelog see docs/CHANGELOG_4

#-----------------------------------------------------------------------------#

For Alpha 0.2 Release Series Changelog see docs/CHANGELOG_3

#-----------------------------------------------------------------------------#

For Alpha 0.1 Release Series Changelog see docs/CHANGELOG_2

#-----------------------------------------------------------------------------#

For Pre-Alpha Changelog see docs/CHANGELOG_1